# clipster

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  build-windows.sh  elm-package.json  package-lock.json  package.json
.circleci/: config.yml
img/: clipster.sketch
native/: Cargo.toml  artifacts.json
native/src/: lib.rs
scripts/: build:assets.js  cibuild.sh  semantic-release-extract-next-version.js  semantic-release.js
src/: Main.elm  contants.js  index.js  main.css  main.js
src/common/: constants.js  moveItem.js
src/main/: clipboard.js  context-menu.js  index.js  init.js  menubar.js  production.index.js  state.js
src/renderer/: App.js  BookmarkSelector.js  ClipSelector.js  Configurator.js  Main.elm  Nav.js  generate-css-cursors.js  index.js  main.css  registerServiceWorker.js
src/renderer/services/: app.js  bus.js  logger.js  state.js
