[package]
name = "clippy-rust"
version = "0.1.0"
authors = ["cdaringe <christopher.dieringer@gmail.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "clippy_rust"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.23"

[dependencies]
clipboard = "0.4.6"
neon = { git = "https://github.com/neon-bindings/neon" }
